# Syzygy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.md  README.md
application/: CMakeLists.txt  main.cpp
assets/khronos-gltf-sample-assets/: LICENSE.md
assets/khronos-gltf-sample-assets/ABeautifulGame/: LICENSE.md
assets/khronos-gltf-sample-assets/Avocado/: LICENSE.md
assets/licenses/: proggyfonts.txt  vkguide.txt
cmake/: clang-format.cmake  clang-tidy.cmake  clang-tools.cmake  dependencies.cmake  include-what-you-use.cmake
iwyu/: glm.functions.imp  integers.imp  mappings.imp  std.imp  vulkan.imp
shaders/: CMakeLists.txt  booleanpush.comp  booleanpush.comp.spv  colored_triangle.frag  colored_triangle.frag.spv  colored_triangle.vert  colored_triangle.vert.spv  gradient.comp  gradient_color.comp  gradient_color.comp.spv  instanced_mesh.frag  instanced_mesh.vert  instanced_mesh.vert.spv  matrix_color.comp  matrix_color.comp.spv  shadowmap.glinl  sky.comp  sky.comp.spv  sparse_push_constant.comp  sparse_push_constant.comp.spv
shaders/atmosphere/: camera.comp  camera.comp.spv  common.glinl  multiscatter_LUT.comp  multiscatter_LUT.comp.spv  raymarch.glinl  skyview_LUT.comp  skyview_LUT.comp.spv  transmittance_LUT.comp  transmittance_LUT.comp.spv
shaders/blinnphong/: phong.frag  phong.frag.spv  phong.vert  phong.vert.spv
shaders/debug/: debugline.frag  debugline.frag.spv  debugline.vert  debugline.vert.spv
shaders/deferred/: directional_light.comp  directional_light.comp.spv  lights.comp  lights.comp.spv  offscreen.frag  offscreen.frag.spv  offscreen.vert  offscreen.vert.spv  sky.comp  sky.comp.spv
shaders/gbuffer/: gbuffer.glinl  gbufferFunctions.glinl  pbr.glinl  pbrFunctions.glinl
shaders/offscreenpass/: depthpass.vert  depthpass.vert.spv
shaders/transfer/: oetf_pure_gamma.comp  oetf_pure_gamma.comp.spv  oetf_srgb.comp  oetf_srgb.comp.spv
shaders/types/: atmosphere.glinl  atmosphere.glsl  atmosphere_legacy.glinl  camera.glsl  lights.glsl  vertex.glsl
source/: CMakeLists.txt  main.cpp
source/syzygy/: CMakeLists.txt
source/syzygy/source/: assets.cpp  (+24 more)
source/vulkan-renderer/: CMakeLists.txt
source/vulkan-renderer/include/: application.hpp  descriptors.hpp  engine.hpp  engine_types.h  shaders.hpp
source/vulkan-renderer/source/: application.cpp  assets.cpp  assets.hpp  buffers.cpp  buffers.hpp  debuglines.cpp  debuglines.hpp  descriptors.cpp  descriptors.hpp  engine.cpp  engine.hpp  engine_types.h  engineparams.hpp  enginetypes.hpp  geometryhelpers.cpp  geometryhelpers.hpp  geometrystatics.hpp  gputypes.hpp  helpers.cpp  helpers.h  helpers.hpp  images.cpp  images.hpp  initializers.cpp  initializers.hpp  lights.hpp  pipelines.cpp  pipelines.hpp  shaders.cpp  shaders.hpp  shadowpass.cpp  shadowpass.hpp
source/vulkan-renderer/source/deferred/: deferred.cpp  deferred.hpp  gbuffer.cpp  gbuffer.hpp
source/vulkan-renderer/source/editor/: editor.cpp  window.hpp
source/vulkan-renderer/source/ui/: engineui.cpp  engineui.hpp  pipelineui.cpp  pipelineui.hpp  propertytable.cpp  propertytable.hpp
syzygy/: CMakeLists.txt  main.cpp
syzygy/include/syzygy/: syzygy.hpp
syzygy/source/syzygy/: assets.cpp  assets.hpp  buffers.cpp  buffers.hpp  debuglines.cpp  debuglines.hpp  descriptors.cpp  descriptors.hpp  engine.cpp  engine.hpp  enginetypes.hpp  geometryhelpers.cpp  geometryhelpers.hpp  helpers.cpp  helpers.hpp  images.cpp  images.hpp  initializers.cpp  initializers.hpp  lights.hpp  pipelines.cpp  pipelines.hpp  shaders.cpp  shaders.hpp  shadowpass.cpp  shadowpass.hpp  syzygy.cpp  vulkanusage.cpp
syzygy/source/syzygy/assets/: assets.cpp  assets.hpp  assetsfwd.hpp  assetstypes.hpp  mesh.hpp  scenetemplate.cpp  scenetemplate.hpp
syzygy/source/syzygy/core/: deletionqueue.hpp  immediate.cpp  immediate.hpp  input.cpp  input.hpp  log.cpp  log.hpp  result.hpp  ringbuffer.hpp  scene.cpp  scene.hpp  scenetexture.cpp  scenetexture.hpp  timing.hpp  uuid.cpp  uuid.hpp
syzygy/source/syzygy/deferred/: deferred.cpp  deferred.hpp  gbuffer.cpp  gbuffer.hpp
syzygy/source/syzygy/editor/: editor.cpp  editor.hpp  editorconfig.hpp  framebuffer.cpp  framebuffer.hpp  graphicscontext.cpp  graphicscontext.hpp  input.cpp  input.hpp  swapchain.cpp  swapchain.hpp  uilayer.cpp  uilayer.hpp  window.cpp  window.hpp
syzygy/source/syzygy/geometry/: geometryhelpers.cpp  geometryhelpers.hpp  geometrystatics.hpp  geometrytests.cpp  geometrytests.hpp  geometrytypes.cpp  geometrytypes.hpp  transform.cpp  transform.hpp
syzygy/source/syzygy/images/: image.cpp  image.hpp  imageoperations.cpp  imageoperations.hpp  imageview.cpp  imageview.hpp
syzygy/source/syzygy/platform/: filesystemutils.cpp  filesystemutils.hpp  platformutils.hpp  vulkanmacros.hpp  vulkanusage.cpp  windowsplatformutils.cpp
syzygy/source/syzygy/renderer/: buffers.cpp  buffers.hpp  descriptors.cpp  descriptors.hpp  gbuffer.cpp  gbuffer.hpp  gputypes.hpp  image.cpp  image.hpp  imageoperations.cpp  imageoperations.hpp  imageview.cpp  imageview.hpp  lights.cpp  lights.hpp  material.cpp  material.hpp  pipelines.cpp  pipelines.hpp  rendercommands.cpp  rendercommands.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scenemesh.cpp  scenemesh.hpp  scenenode.cpp  scenenode.hpp  scenetexture.cpp  scenetexture.hpp  shaders.cpp  shaders.hpp  shadowpass.cpp  shadowpass.hpp  vulkanstructs.cpp  vulkanstructs.hpp
syzygy/source/syzygy/renderer/pipelines/: debuglines.cpp  debuglines.hpp  deferred.cpp  deferred.hpp  skyview.cpp  skyview.hpp
syzygy/source/syzygy/renderpass/: renderpass.cpp  renderpass.hpp
syzygy/source/syzygy/ui/: dockinglayout.cpp  dockinglayout.hpp  engineui.cpp  engineui.hpp  hud.cpp  hud.hpp  pipelineui.cpp  pipelineui.hpp  propertytable.cpp  propertytable.hpp  statelesswidgets.cpp  statelesswidgets.hpp  texturedisplay.cpp  texturedisplay.hpp  uirectangle.hpp  uiwidgets.cpp  uiwidgets.hpp  uiwindow.cpp  uiwindow.hpp  uiwindowscope.cpp  uiwindowscope.hpp  widgets.cpp  widgets.hpp
syzygy/source/syzygy/utils/: platformutils.hpp  windowsplatformutils.cpp
(+33 files in other folders)
